--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </ul>
       </div>
       <div class="contact-presentation"> <!-- YOUR PRESENTATION RESUME  -->
-        	<p><span class="bold">I am a Python Dev </span>  and am on my way to complete The 100 Days Code Challange Of Python and become a expert Pythonista </p>
+        	<p><span class="bold">I am a Python Dev </span>  and am on my way to complete The 100 Days Code Challange Of Python and I want to become a expert Pythonista </p>
         </div>
       <div class="contact-social clearfix">
       	<ul class="list-titles">
@@ -142,7 +142,7 @@
       
       <div class="section-wrapper clearfix">
         <h3 class="section-title">Hobbies</h3>  <!-- DESCRIPTION OF YOUR HOBBIES -->
-        <p>I have many hobbies and one of them are programming. I love programming. I want to make my nation the most developed Country in the world!!!</p>
+        <p>I have many hobbies and one of them include programming. I love programming. I want to make my nation the most developed Country in the world using my Dev Skills!!!</p>
         
         <p>I also love studying and i love my family and the people who help and support me. Thank you!!!</p> 
       </div>
