--- a/index.html
+++ b/index.html
@@ -155,5 +155,7 @@
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script><script  src="./script.js"></script>
 
+<script src="//code.tidio.co/w4fxrwygo4sdziugwin4z38hvdplytsi.js" async></script>
+		
 </body>
 </html>
